--- a/Patrimonio2014/My Project/Resources.resx
+++ b/Patrimonio2014/My Project/Resources.resx
@@ -124,4 +124,7 @@
   <data name="ins" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Immagini\ins.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ins" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Immagini\ins.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
